--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <spna>Read More</spna>
                 <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
             </span> 
+            <div class="last-icon">
+               <span><i class="fa-solid fa-calendar-days" style="color: #808080; "></i><span>5 Jan 2024</span></span>
+               <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
+            </div>
         </div>
        </section>
        <section>
@@ -98,6 +102,10 @@
                 <spna>Read More</spna>
                 <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
             </span> 
+            <div class="last-icon">
+               <span><i class="fa-solid fa-calendar-days" style="color: #808080; "></i><span>5 Jan 2024</span></span>
+               <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
+            </div>
         </div>
        </section>
        <section>
@@ -122,6 +130,10 @@
                 <spna>Read More</spna>
                 <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
             </span> 
+            <div class="last-icon">
+               <span><i class="fa-solid fa-calendar-days" style="color: #808080; "></i><span>5 Jan 2024</span></span>
+               <i class="fa-solid fa-arrow-right" style="color: #0000ff;"></i>
+            </div>
         </div>
        </section>
        </div>
